# optimal_control

./: FORCESNLPsolver.mexa64  README.md  target_trajectory_simulation.m
acado_planning/: problem_formulation.m
forces_pro_interfaces/: objfun.m
forces_pro_interfaces/1/: circle.m  readme  test.m
forces_pro_interfaces/2/: objfun.m  objfunN.m  test.m
forces_pro_interfaces/b_model/: objfun.m  objfunN.m  setupsolver.m
forces_pro_interfaces/continuous_model_accelerations/: metrics.m  objfun.m  objfunGlobal.m  objfunGlobal_target_model.m  objfunRelative.m  setup_solver.m  setup_solver_target_model.m
forces_pro_interfaces/continuous_model_accelerations/pitch_angle_constraint/: objfunGlobal.m  objfunN.m  setup_solver.m
forces_pro_interfaces/continuous_model_accelerations/pitch_rate_objfun/: FORCESNLPsolver.mexw64  FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_70.c  FORCESNLPsolver_py.py  FORCESNLPsolver_simulinkBlock.mexw64  FORCESNLPsolver_simulinkBlockcompact.mexw64  circle.m  pitch_rate.asv  pitch_rate.m  stdout_temp
forces_pro_interfaces/continuous_model_accelerations/pitch_rate_objfun/FORCESNLPsolver/include/: FORCESNLPsolver.h
forces_pro_interfaces/continuous_model_accelerations/pitch_rate_objfun/FORCESNLPsolver/interface/: FORCESNLPsolver.m  FORCESNLPsolver_build.py  FORCESNLPsolver_lib.mdl  FORCESNLPsolver_mex.c  FORCESNLPsolver_simulinkBlock.c  FORCESNLPsolver_simulinkBlockcompact.c  FORCESNLPsolvercompact_lib.mdl
forces_pro_interfaces/continuous_model_euler/: objfun.m  setup_solver.m
forces_pro_interfaces/discrete_model_body/: objfun.m  setup_solver.m
forces_pro_interfaces/model_yaw_pitch/: objfun.m  objfunN.m
forces_pro_interfaces/multi_uavs/: clear_script.m  objfunGlobal_target_model.m  setup_solver_target_model.m  setup_solver_target_model_mutual_visibility.m  test_metrics.m
forces_pro_interfaces/receding_horizon_simulator/: FORCESNLPsolver.mexa64  receding_horizon_simulator.m
forces_pro_interfaces/simulations_iros/: objfun.m  objfunN.m  simulation_iros.m
simulator/: target_trajectory_simulation.m
src/optimal_control_interface/: CMakeLists.txt  package.xml
src/optimal_control_interface/include/: FORCESNLPsolver.h  optimal_control_interface.h
src/optimal_control_interface/launch/: opt_control_node.launch
src/optimal_control_interface/scripts/: path_follower.py
src/optimal_control_interface/src/: FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_30.c  FORCESNLPsolver_model_80.c  main.cpp  optimal_control_interface.cpp
(+3 files in other folders)
